mod package.json

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+ssh://git@github.com/shikato/codex_lab.git"
   },
   "author": "shikato",
-  "license": "ISC",
+  "license": "",
   "bugs": {
     "url": "https://github.com/shikato/codex_lab/issues"
   },
